fix spacing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -167,7 +167,6 @@ a.btn {
     position: absolute;
     left: 0;
     right: 0;
-    top: 141px;
     color: $white;
     height: $collage-image-size * 2;
 
